continue converting SettingManager usage